// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should OffersListFavorite render correctly 1`] = `
<div
  className="favorites__places"
/>
`;

exports[`Should OffersListMain render correctly 1`] = `
<div
  className="cities__places-list places__list tabs__content"
/>
`;

exports[`Should OffersListRoom render correctly 1`] = `
<div
  className="near-places__list places__list"
/>
`;
